--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ script:
   - yarn build 
 deploy:
   provider: pages
-  edge: true,
+  edge: true
   skip-cleanup: true
   keep-history: true
   github-token: $GITHUB_TOKEN
   local-dir: dist/
-  target-branch: gh-web-site
+  target-branch: gh-pages
   commit_message: "Deploy Release"
   on:
-    branch
+    branch: master
